@@ -1,4 +1,6 @@
 1.5.6.dev0
+ * #316: Fix hang when a stale database dump named pipe from an aborted borgmatic run remains on
+   disk.
  * Tweak comment indentation in generated configuration file for clarity.
 
 1.5.5
